<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/startTrainingButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="253dp"
        android:layout_marginBottom="173dp"
        android:text="@string/startTrainingButtonText"
        app:layout_constraintBottom_toTopOf="@+id/unregisterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/archiveButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/archiveButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTrainingButton" />

    <Button
        android:id="@+id/unregisterButton"
        android:layout_width="193dp"
        android:layout_height="54dp"
        android:layout_marginBottom="216dp"
        android:text="@string/unregisterButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTrainingButton" />
</androidx.constraintlayout.widget.ConstraintLayout>