<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".SetActivity">

    <EditText
        android:id="@+id/weightEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/weightEditTextHint"
        android:inputType="number"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/repsEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/repsEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="37dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/repsEditTextHint"
        android:inputType="text"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/commentsEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightEditText" />

    <EditText
        android:id="@+id/commentsEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="70dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/commentsEditTextHint"
        android:inputType="text"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repsEditText" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="47dp"
        android:backgroundTint="@color/objectsColor"
        android:fontFamily="@font/montserrat"
        android:text="@string/addSetButtonText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cancelSetButton"
        app:layout_constraintEnd_toEndOf="@+id/cancelSetButton"
        app:layout_constraintStart_toStartOf="@+id/cancelSetButton"
        app:layout_constraintTop_toBottomOf="@+id/commentsEditText" />

    <Button
        android:id="@+id/cancelSetButton"
        android:layout_width="195dp"
        android:layout_height="64dp"
        android:layout_marginBottom="198dp"
        android:backgroundTint="@color/objectsColor"
        android:fontFamily="@font/montserrat"
        android:text="@string/cancelSetButtonText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addButton" />
</androidx.constraintlayout.widget.ConstraintLayout>