<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".AuthorizeActivity">

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="171dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/userNameAuthEditTextHint"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="228dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/passwordAuthEditTextHint"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/authorizeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditText"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/authorizeButton"
        android:layout_width="235dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:textSize="18sp"
        android:backgroundTint="@color/objectsColor"
        android:hint="@string/authorizeButtonText"
        android:fontFamily="@font/montserrat"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>